# linux-app-tray

./: LICENSE  README.md  extension.js  indicatorStatusIcon.js  meson.build  metadata.json  prefs.js  pyproject.toml  settingsManager.js  stylesheet.css  trayIconsManager.js  util.js
data/: linux-app-tray.desktop  org.linuxapptray.Settings.gschema.xml  style.css
schemas/: gschemas.compiled  org.gnome.shell.extensions.linux-app-tray.gschema.xml
src/: __init__.py  application.py  context_menu.py  icon_manager.py  main.py  overflow_popover.py  tooltip_popup.py  tray_icon.py  tray_window.py
src/dbus/: __init__.py  dbus_menu_proxy.py  interfaces.py  sni_item_proxy.py  sni_watcher.py
src/notifications/: __init__.py  notification_manager.py  notification_popup.py
src/settings/: __init__.py  preferences_window.py  settings_manager.py
src/xembed/: __init__.py  xembed_host.py
tests/: test_icon_manager.py  test_notifications.py  test_settings.py
